# Clinically-customized-LLM-using-RAG

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  .prettierignore  LICENSE  Makefile  README.md  alembic.ini  docker-compose.yml  package.json  pnpm-lock.yaml  prettier.config.mjs  pyproject.toml
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 20260409_01_create_patient_tables.py
apps/api/data/: bias_audit.db  compliance_audit.db  feedback_capture.db  feedback_rlhf.db  monitoring_metrics.db  ontology_mappings.db  patients.db
apps/api/src/: main.py
apps/api/src/amca_api/: __init__.py  config.py
apps/api/src/amca_api/routes/: health.py
apps/api/src/chatbot/: __init__.py  chat_models.py  chat_router.py  chat_service.py  context_builder.py  session_store.py  urgency_detector.py
apps/api/src/ingestion/: __init__.py  ehr_connector.py  event_bus.py  imaging_connector.py  nlp_connector.py  omics_connector.py  wearable_connector.py
apps/api/src/monitoring/: __init__.py  concept_drift.py  monitoring_api.py  performance_monitor.py  retraining_trigger.py  statistical_drift.py
apps/api/src/output/: __init__.py  alert_service.py  feedback_capture.py  fhir_integration.py  integration_api.py
apps/api/src/patients/: database.py  embedding_worker.py  models.py  patient_router.py  patient_service.py  schemas.py  storage_service.py
apps/api/src/preprocessing/: __init__.py  deidentification.py  harmonisation.py  image_preprocessing.py  imputation_qc.py  preprocessor_pipeline.py
apps/api/src/reasoning/: __init__.py  differential_diagnosis.py  explainability.py  reasoning_orchestrator.py  risk_prognosis.py  treatment_recommender.py
apps/api/src/safety/: __init__.py  bias_auditor.py  human_in_loop.py  regulatory_compliance.py  safety_orchestrator.py  uncertainty_quantification.py
apps/api/src/shared/: __init__.py  llm_client.py
apps/api/tests/: test_e2e.py  test_health.py
apps/api/tests/chatbot/: test_chat_service.py  test_context_builder.py  test_session_store.py  test_urgency_detector.py
apps/api/tests/ingestion/: __init__.py  test_ehr_connector.py  test_event_bus.py  test_imaging_connector.py  test_nlp_connector.py  test_omics_connector.py  test_wearable_connector.py
apps/api/tests/monitoring/: __init__.py  test_concept_drift.py  test_monitoring_api.py  test_performance_monitor.py  test_retraining_trigger.py  test_statistical_drift.py
apps/api/tests/output/: __init__.py  test_alert_service.py  test_feedback_capture.py  test_fhir_integration.py
apps/api/tests/patients/: test_patient_service.py  test_storage_service.py
apps/api/tests/preprocessing/: __init__.py  test_deidentification.py  test_harmonisation.py  test_image_preprocessing.py  test_imputation_qc.py  test_preprocessor_pipeline.py
apps/api/tests/reasoning/: __init__.py  test_differential_diagnosis.py  test_explainability.py  test_reasoning_orchestrator.py  test_risk_prognosis.py  test_treatment_recommender.py
apps/api/tests/safety/: __init__.py  test_bias_auditor.py  test_human_in_loop.py  test_regulatory_compliance.py  test_safety_orchestrator.py  test_uncertainty_quantification.py
apps/api/tests/shared/: test_llm_client.py
apps/web/: next.config.mjs  openapi.json  package.json
apps/web/src/app/: layout.tsx  page.tsx
apps/web/src/app/chat/: page.tsx
apps/web/src/app/dashboard/: layout.tsx  page.tsx
apps/web/src/components/chat/: PrescriptionCard.tsx  RecordUploader.tsx
apps/web/src/hooks/: useChat.ts
apps/web/src/lib/: chat-api.ts
apps/web/src/lib/api/: client.ts
docs/: architecture.md
infra/docker/: Dockerfile.api  Dockerfile.web
infra/k8s/: api-deployment.yaml  configmap.yaml  kafka.yaml  namespace.yaml  postgres.yaml  redis.yaml  secret.template.yaml  web-deployment.yaml
scripts/: build.sh  dev.sh  migrate.sh
(+15 files in other folders)
